# gstreamer-demo

./: .clang-format  CMakeLists.txt  main.cpp
